2002-01-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GNUmakefile (Base_AGSDOC_FLAGS): Fix to use
	-HeaderDirectory and -SourceDirectory to get docs to build again...
	hopefully with both sets of make rules.

Fri Jan  4 15:44:02 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* base.make.in (GNUSTEP_BASE_HAVE_LIBXML): Define.
	* Source/GNUmakefile (Base_AGSDOC_FLAGS): Do not use
	-HeaderDirectory.
	(Base_HEADER_FILES_DIR): Define.
	* Source/GNUmakefile: Include documentation.make only if doc=yes
	is passed on the command line.
	* Tools/GNUmakefile: Idem.
	
2002-01-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/autogsdoc.m: Rearrange code somewhat and remove auto
	generation of index and 'up' links ... now requires an explicit
	-Up if you want one.  Fix to support multiple source files parsed
	per interface file.
	* Tools/GNUmakefile: Add -Up for documentation generation
	* Source/GNUmakefile: ditto

Fri Jan  4 11:42:23 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Tools/HTMLLinker.m: Implemented -FixupAllLinks, -PathMappings,
	-PathMappingsFile options.  Made -CheckLinks default to YES.
	Added support for specifying a directory as input or destination
	file, meaning all html files found in the directory.  Never
	attempt to fixup links starting with mailto: or news: or without a
	filename, even if running with -FixupAllLinks YES.
	* Tools/HTMLLinker.html: New file.
	
2002-01-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/autogsdoc.m: Fixup bug in html relocation code ... was
	failing to adjust string length variable correctly.

2002-01-03  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/NSString.h: Extern constant string class
	reference for Darwin added.  
	* Source/GSString.m ([NXConstantString +initialize]): Setup constant
	string class reference variable for Darwin.
	* Source/NSObject.m: Don't put reference count and zone with object
	on Darwin.
	* Source/behavior.m (NeXT_RUNTIME/behavior_class_add_class): Use NeXT 