@@ -1,3 +1,9 @@
+2002-01-05  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Tools/autogsdoc.m: Simplify by removing SourceDirectory default.
+	* Source/GNUmakefile (Base_AGSDOC_FLAGS): Remove the SourceDirectory
+	option ... now assumed to be the current directory for simplicity.
+
 2002-01-04  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/GNUmakefile (Base_AGSDOC_FLAGS): Fix to use
